separating study files from main files

--- a/studies/index-animationStudy.html
+++ b/studies/index-animationStudy.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprite Animations</title>
-    <link rel="stylesheet" href="resources/styles.css">
-    <script src="script.js" type="module" defer></script>
+    <title>Sprite Animations - Studies</title>
+    <link rel="stylesheet" href="styles-animationStudy.css">
+    <script src="script-animationStudy.js" defer></script>
 </head>
 <body>
     <div class="select-animation">
@@ -18,12 +18,14 @@
             <option value="running">Running</option>
             <option value="dizzy">Dizzy</option>
             <option value="crouch">Crouch</option>
-            <option value="rolling">Rolling Attack</option>
-            <option value="bite">Bite Attack</option>
+            <option value="rolling attack">Rolling</option>
+            <option value="bite attack">Bite</option>
             <option value="ko">K.O.</option>
-            <option value="getHit">Get Hit</option>
+            <option value="get hit">Get Hit</option>
         </select>
-    </div>    
-    <canvas id="canvas"></canvas>
+    </div>
+    
+    <canvas id="canvas1"></canvas>
+    <canvas id="canvas2"></canvas>
 </body>
 </html>
